--- a/src/popup/taskList/index.scss
+++ b/src/popup/taskList/index.scss
@@ -1,7 +1,31 @@
 .task-list-container {
     padding: 8px;
+    box-sizing: border-box;
+    height: 600px;
+    width: 800px;
 }
 
 .task-item-header {
+    display: flex;
+    align-items: center;
+
+    &-status {
+        margin-left: 8px;
+        &-pending {
+
+        }
+        &-downloading {
+
+        }
+        &-done {
+
+        }
+        &-error {
+
+        }
+    }
+}
+
+.task-item-body {
 
 }
