--- a/src/popup/root.css
+++ b/src/popup/root.css
@@ -45,3 +45,19 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+.popup-container {
+  padding: 8px;
+  box-sizing: border-box;
+  height: 600px;
+  width: 800px;
+}
+
+.popup-header {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.popup-body {
+  padding: 8px;
+}
