--- a/src/popup/taskList/index.scss
+++ b/src/popup/taskList/index.scss
@@ -43,6 +43,10 @@
 
         &-retry {
         }
+
+        &-remove {
+            cursor: pointer;
+        }
     }
     
     .task-item-body {
