--- a/src/popup/root.css
+++ b/src/popup/root.css
@@ -56,6 +56,12 @@ h1, h2, h3, h4, h5, h6 {
 .popup-header {
   font-size: 20px;
   font-weight: 500;
+  position: relative;
+}
+
+.popup-header-clear-history {
+  position: absolute;
+  right: 8px;
 }
 
 .popup-body {
