--- a/src/popup/root.css
+++ b/src/popup/root.css
@@ -59,9 +59,17 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-.popup-header-clear-history {
+.popup-header-ext {
   position: absolute;
   right: 8px;
+  top: -2px;
+}
+
+.popup-header-ext .popup-header-clear-history {
+}
+
+.popup-header-ext .popup-header-clear-setting {
+  margin-right: 8px;
 }
 
 .popup-body {
